--- a/Practice110123/project-setup-template/index.html
+++ b/Practice110123/project-setup-template/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TypeScript</title>
+    <script src="analytics.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body></body>
