--- a/Simple_ToDo/public/index.html
+++ b/Simple_ToDo/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul id="list"></ul>
     <form id="task-form">
-        <input type="text" id="task-title">
+        <input type="text" id="task-input">
         <button type="submit">Add</button>
     </form>
 </body>
